# cmkproject

./: .gitignore  CMakeLists.txt  README.md
cmkproject/: CMakeLists.txt
cmkproject/unittests/: CMakeLists.txt  test_utils.cpp
cmkproject/utils/: CMakeLists.txt  utils.cpp  utils.h
executables/: CMakeLists.txt  main.cpp
